--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
+
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
 * {
   box-sizing: border-box;
@@ -78,6 +81,7 @@ body {
         }
 
 </style>
+</head>
 <body>
 
     <img class="kok img" src="Images/Logo.jpg" width="235" height="215" style="float: left;">
@@ -131,3 +135,4 @@ body {
 
 </body>
 </html>
+
